// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tile Tile Snapshot can move matches current snapshot 1`] = `
<div
  class="hex tile"
  draggable="true"
  style="--color: black; fill: rgb(255 238 11 );"
  title="ant"
>
  <svg
    xmlns="http://www.w3.org/2000/svg"
  >
    <use
      href="#ant"
    />
  </svg>
</div>
`;

exports[`Tile Tile Snapshot no moves matches current snapshot 1`] = `
<div
  class="hex tile"
  draggable="false"
  style="--color: rgb(255 238 11 ); fill: black;"
  title="fly"
>
  <svg
    xmlns="http://www.w3.org/2000/svg"
  >
    <use
      href="#fly"
    />
  </svg>
</div>
`;
